# Violet

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
Mind/: pyproject.toml
Mind/Brain/: llama_serve.py
Mind/GPT_SoVITS/: api.py  process_ckpt.py
Mind/tests/: test_llama_server.py
src/: App.tsx
violet/: README.md  __init__.py  config.py  constants.py  embeddings.py  errors.py  interface.py  log.py  memory.py  pyproject.toml  requirements.txt  settings.py  system.py  utils.py
violet/agent/: __init__.py  agent.py  agent_configs.py  agent_states.py  agent_wrapper.py  app_constants.py  app_utils.py  background_agent.py  core_memory_agent.py  episodic_memory_agent.py  knowledge_vault_agent.py  message_queue.py  meta_memory_agent.py  procedural_memory_agent.py  reflexion_agent.py  resource_memory_agent.py  semantic_memory_agent.py  temporary_message_accumulator.py  upload_manager.py
violet/client/: client.py
violet/configs/: config.yaml
violet/database/: chroma.py  pglite_connector.py  schema_extractor.py
violet/functions/: ast_parsers.py  functions.py  helpers.py  schema_generator.py
violet/helpers/: __init__.py  converters.py  message_helpers.py  tool_rule_solver.py
violet/i18n/: i18n.py
violet/llama/: __init__.py  llama.py
violet/llm_api/: embeddings.py  helpers.py  llama_client.py  llm_api_tools.py  llm_client.py  llm_client_base.py  mlx_client.py  openai.py  openai_client.py
violet/local_llm/: __init__.py
violet/mlx/: __init__.py  mlx.py
violet/orm/: __init__.py  agent.py  agents_tags.py  base.py  block.py  blocks_agents.py  cloud_file_mapping.py  custom_columns.py  enums.py  episodic_memory.py  file.py  knowledge_vault.py  message.py  mixins.py  organization.py  personas.py  procedural_memory.py  provider.py  resource_memory.py  sandbox_config.py  semantic_memory.py  sqlalchemy_base.py  sqlite_functions.py  step.py  tool.py  tools_agents.py  user.py
violet/prompts/: gpt_persona.py  gpt_system.py
violet/schemas/: __init__.py  agent.py  block.py  cloud_file_mapping.py  embedding_config.py  environment_variables.py  episodic_memory.py  file.py  knowledge_vault.py  llm_config.py  memory.py  message.py  organization.py  personas.py  procedural_memory.py  providers.py  resource_memory.py  sandbox_config.py  semantic_memory.py  source.py  step.py  tool.py  tool_rule.py  tts_config.py  usage.py  user.py  violet_base.py  violet_message.py  violet_message_content.py  violet_request.py  violet_response.py  whisper_config.py
(+220 files in other folders)
